--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -1,5 +1,5 @@
 <div id="detailed-results-container" class="container-content goodmoves-saved-searches">
-  {{#compare (length @root.data.searches.items) ">" 0 ~}}
+  {{#compare (length @root.data.searches.items.[0]) ">" 0 ~}}
   <div class="settings">
     <span class="mdc-typography--body1">Email frequency</span>
     {{> email_frequency}}
@@ -9,7 +9,7 @@
     Searches
   </h1>
 
-  {{#compare (length @root.data.searches.items) ">" 0 ~}}
+  {{#compare (length @root.data.searches.items.[0]) ">" 0 ~}}
   <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list mdc-elevation--z3">
     <li class="mdc-list-item mdc-list-item--header">
       <span class="mdc-list-item__graphic far" aria-hidden="true"></span>
@@ -33,14 +33,14 @@
         </div>
       </div>
     </li>
-    {{#each @root.data.searches.items ~}}
+    {{#each @root.data.searches.items.[0] ~}}
       <li class="mdc-list-item mdc-ripple-upgraded">
         <span class="mdc-list-item__graphic far fa-search fa-2x" aria-hidden="true"></span>
         <div class="mdc-layout-grid">
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-2-phone saved-search">
               <span class="mdc-list-item__text">
-                <a href="/search?{{{this.querystring}}}">{{{name}}}</a>
+                <a href="/search?{{{this.querystring}}}">{{{partition}}}</a>
                 <div class="mdc-list-item__secondary-text">
                   {{#with (querystring querystring) ~}}
                     {{#if keywords ~}}
@@ -102,20 +102,20 @@
                 onMethod="POST"
                 offMethod="POST"
                 iconClasses="far fa-envelope"
-                on=subscribed
+                on=partitionActive
               }}
               {
                 "onData": {
-                  "name": {{{stringify ../name}}}
+                  "name": {{{stringify ../partition}}}
                 },
                 "offData": {
-                  "name": {{{stringify ../name}}}
+                  "name": {{{stringify ../partition}}}
                 }
               }
               {{/ajax_chip}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
-              {{> delete_search name=name}}
+              {{> delete_search name=partition}}
             </div>
           </div>
         </div>
