--- a/sites/configurations/goodmoves/templates/vacancies/vacancy-head-tags.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy-head-tags.hbs
@@ -19,3 +19,4 @@
 <title>Goodmoves – Vacancy</title>
 <meta property="og:title" content="Goodmoves – Vacancy" data-dynamic="true">
 {{/if ~}}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
