Fixed whitespace issue with textareas

--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -194,7 +194,7 @@
                 <label class="mdc-floating-label" for="user-notes">
                   Your notes
                 </label>
-                <textarea class="mdc-text-field__input" data-simple-mde="true" name="notes">{{{getProperty @root.data.notes Id}}}</textarea>
+                <textarea class="mdc-text-field__input" data-simple-mde="true" name="notes">{{getProperty @root.data.notes Id}}</textarea>
                 <input type="hidden" name="id" value="{{Id}}">
               </div>
               <div class="save-button-block">
