--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -54,6 +54,9 @@ body {
   word-break: break-word;
   -webkit-tap-highlight-color: transparent;
 }
+*:not(html) {
+  -webkit-transform: translate3d(0, 0, 0);
+}
 .mdc-theme--background {
   background-color: $mdc-theme-secondary-light !important;
 }
