Notes heading sizes

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -987,6 +987,12 @@ a {
     .mdc-typography--body2 {
       font-weight: 600;
     }
+    h1 {
+      font-size: 1.4rem;
+    }
+    h2 {
+      font-size: 1.2rem;
+    }
   }
   .user-notes {
     display: none;
