Re-numbered skills

--- a/sites/configurations/digitalparticipation/templates/skill-up-detail.hbs
+++ b/sites/configurations/digitalparticipation/templates/skill-up-detail.hbs
@@ -2,20 +2,23 @@
   <div class="mdc-layout-grid__inner expand paging hide-on-med-and-up">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h3 class="nomargin">
-        <a href="/skill-up/communicating"{{#compare request.params.slug "===" "communicating"}} class="active"{{/compare}}>
+        <a href="/skill-up/foundations"{{#compare request.params.slug "===" "foundations"}} class="active"{{/compare}}>
           <span class="number">1</span>
         </a>
-        <a href="/skill-up/handling-info"{{#compare request.params.slug "===" "handling-info"}} class="active"{{/compare}}>
+        <a href="/skill-up/communicating"{{#compare request.params.slug "===" "communicating"}} class="active"{{/compare}}>
           <span class="number">2</span>
         </a>
-        <a href="/skill-up/transacting"{{#compare request.params.slug "===" "transacting"}} class="active"{{/compare}}>
+        <a href="/skill-up/handling-info"{{#compare request.params.slug "===" "handling-info"}} class="active"{{/compare}}>
           <span class="number">3</span>
         </a>
-        <a href="/skill-up/problem-solving"{{#compare request.params.slug "===" "problem-solving"}} class="active"{{/compare}}>
+        <a href="/skill-up/transacting"{{#compare request.params.slug "===" "transacting"}} class="active"{{/compare}}>
           <span class="number">4</span>
         </a>
-        <a href="/skill-up/safety"{{#compare request.params.slug "===" "safety"}} class="active"{{/compare}}>
+        <a href="/skill-up/problem-solving"{{#compare request.params.slug "===" "problem-solving"}} class="active"{{/compare}}>
           <span class="number">5</span>
+        </a>
+        <a href="/skill-up/safety"{{#compare request.params.slug "===" "safety"}} class="active"{{/compare}}>
+          <span class="number">6</span>
         </a>
       </h3>
     </div>
@@ -59,7 +62,7 @@
         </h3>
       </div>
       {{#compare request.params.slug "===" "foundations"}}
-      <h3>Digital Foundation Skills</h3>
+      <h3><span class="number">1</span> Digital Foundation Skills</h3>
       <p>
         The framework includes a section on 'foundation' skills, which are typically required by those not currently using digital technology or using it in limited ways. These foundation skills are needed in all circumstances before moving on to develop skills for life and skills for work.
       </p>
@@ -81,7 +84,7 @@
       </ul>
       {{else}}
       {{#compare request.params.slug "===" "communicating"}}
-      <h3><span class="number">1</span> Communicating</h3>
+      <h3><span class="number">2</span> Communicating</h3>
       <p>
         Communicate, collaborate and share
       </p>
@@ -119,7 +122,7 @@
       </ul>
       {{else}}
       {{#compare request.params.slug "===" "handling-info"}}
-      <h3><span class="number">2</span> Handling information and content</h3>
+      <h3><span class="number">3</span> Handling information and content</h3>
       <p>
         Find, manage and store digital information and content securely
       </p>
@@ -155,7 +158,7 @@
       </ul>
       {{else}}
       {{#compare request.params.slug "===" "transacting"}}
-      <h3><span class="number">3</span> Transacting</h3>
+      <h3><span class="number">4</span> Transacting</h3>
       <p>
         Register and apply for services, but and sell goods and services and administer and manage transactions online
       </p>
@@ -189,7 +192,7 @@
       </ul>
       {{else}}
       {{#compare request.params.slug "===" "problem-solving"}}
-      <h3><span class="number">4</span> Problem solving</h3>
+      <h3><span class="number">5</span> Problem solving</h3>
       <p>
         Finding solutions to problems using digital tools and online services
       </p>
@@ -223,7 +226,7 @@
       </ul>
       {{else}}
       {{#compare request.params.slug "===" "safety"}}
-      <h3><span class="number">5</span> Being safe and legal online</h3>
+      <h3><span class="number">6</span> Being safe and legal online</h3>
       <ul class="mdc-layout-grid__cell collapsible">
         <li>
           <div class="mdc-layout-grid__cell collapsible-header">
@@ -261,20 +264,23 @@
   <div class="mdc-layout-grid__inner expand paging hide-on-small-only">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h3 class="margin-top">
-        <a href="/skill-up/communicating"{{#compare request.params.slug "===" "communicating"}} class="active"{{/compare}}>
+        <a href="/skill-up/foundations"{{#compare request.params.slug "===" "foundations"}} class="active"{{/compare}}>
           <span class="number">1</span>
         </a>
-        <a href="/skill-up/handling-info"{{#compare request.params.slug "===" "handling-info"}} class="active"{{/compare}}>
+        <a href="/skill-up/communicating"{{#compare request.params.slug "===" "communicating"}} class="active"{{/compare}}>
           <span class="number">2</span>
         </a>
-        <a href="/skill-up/transacting"{{#compare request.params.slug "===" "transacting"}} class="active"{{/compare}}>
+        <a href="/skill-up/handling-info"{{#compare request.params.slug "===" "handling-info"}} class="active"{{/compare}}>
           <span class="number">3</span>
         </a>
-        <a href="/skill-up/problem-solving"{{#compare request.params.slug "===" "problem-solving"}} class="active"{{/compare}}>
+        <a href="/skill-up/transacting"{{#compare request.params.slug "===" "transacting"}} class="active"{{/compare}}>
           <span class="number">4</span>
         </a>
-        <a href="/skill-up/safety"{{#compare request.params.slug "===" "safety"}} class="active"{{/compare}}>
+        <a href="/skill-up/problem-solving"{{#compare request.params.slug "===" "problem-solving"}} class="active"{{/compare}}>
           <span class="number">5</span>
+        </a>
+        <a href="/skill-up/safety"{{#compare request.params.slug "===" "safety"}} class="active"{{/compare}}>
+          <span class="number">6</span>
         </a>
       </h3>
     </div>
