--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1795,7 +1795,7 @@ body {
 // Lists =======================================================================
 
 .fa-ul {
-  margin: 0 0 0 $unit*1.55;
+  margin: 0 0 0 $unit*1.65 !important;
   li {
     margin-bottom: $unit/2;
   }
