Improved look of notes fade out

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -989,9 +989,11 @@ a {
     }
     h1 {
       font-size: 1.4rem;
+      margin: $unit/2 0 $unit/4;
     }
     h2 {
       font-size: 1.2rem;
+      margin: $unit/4 0 $unit/5;
     }
   }
   .user-notes {
@@ -2569,10 +2571,10 @@ form.inline-form {
   overflow: hidden;
   position: relative;
   &:before {
-    margin-top: -1rem;
-    height: 1rem;
+    margin-top: -$unit*1.5;
+    height: $unit*1.5;
     width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+    background: linear-gradient(rgba(236, 242, 233, 0), rgba(236, 242, 233, 1));
     content: "";
     display: block;
     position: absolute;
