--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2024,6 +2024,9 @@ footer,
 }
 .home-browse,
 .browse main {
+  .mdc-layout-grid__inner {
+    grid-gap: $unit*4;
+  }
   .browse-title {
     margin: $unit/2 0 $unit/2;
   }
@@ -2031,25 +2034,15 @@ footer,
     height: auto;
   }
 }
-.home-browse {
-  .mdc-icon-toggle {
-    display: inline-block;
-    vertical-align: top;
-    margin-left: $unit/2;
-    .far {
-      vertical-align: top;
-    }
-  }
-  .page-content {
-    padding: 0;
-  }
-}
 
 .home-heading {
   padding: 0 $unit*1.5;
   .mdc-typography--headline5 {
-    margin: $unit/2 0 0;
+    margin: $unit*1.5 0 $unit/2;
   }
+}
+.home-content {
+  background-color: $mdc-theme-secondary-light;
 }
 .home-jobs {
   background-color: $mdc-theme-secondary-light;
@@ -2059,7 +2052,7 @@ footer,
 .home {
   .currently-recruiting {
     box-shadow: none !important;
-    margin: $unit 0 $unit/2;
+    margin: 0;
   }
   .tfn-latest {
     padding: 0 $unit*1.5 0 !important;
@@ -2070,6 +2063,27 @@ footer,
     }
   }
 }
+.home-browse {
+  background-color: $mdc-theme-complimentary-light;
+  .home-jobs {
+    background-color: transparent;
+  }
+  .mdc-drawer__content-heading {
+    padding: 0 $unit;
+    .mdc-icon-toggle {
+      display: inline-block;
+      margin: 0;
+      vertical-align: middle;
+      .far {
+        vertical-align: top;
+      }
+    }
+  }
+  .page-content {
+    padding: 0;
+  }
+}
+
 .tfn-latest {
   margin-bottom: $unit*1.5;
   .mdc-card {
@@ -2571,8 +2585,8 @@ form.inline-form {
   overflow: hidden;
   position: relative;
   &:before {
-    margin-top: -$unit*1.5;
-    height: $unit*1.5;
+    margin-top: -$unit*2.5;
+    height: $unit*2.5;
     width: 100%;
     background: linear-gradient(rgba(236, 242, 233, 0), rgba(236, 242, 233, 1));
     content: "";
