--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -106,20 +106,88 @@
     </div>
   </div>
 
-  {{> dialog_shortlist}}
+  <div class="home-content">
+    {{> dialog_shortlist}}
 
-  {{#if @root.data.auth}}
+    {{#if @root.data.auth}}
+      <div class="mdc-layout-grid home-heading">
+        <div class="mdc-layout-grid__inner">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+            <h2 class="mdc-typography--headline5">
+              Your shortlist
+            </h2>
+          </div>
+        </div>
+      </div>
+      <div class="home-jobs">
+        <div class="mdc-layout-grid equal-height home-shortlist">
+          <div class="scroll-button scroll-left">
+            <span class="fal fa-fw fa-angle-left scroll-icon"></span>
+          </div>
+          <div class="scroll-button scroll-right">
+            <span class="fal fa-fw fa-angle-right scroll-icon"></span>
+          </div>
+          <div class="mdc-layout-grid__inner scrolling-grid">
+            {{#compare @root.data.supplimentaryResponses.shortlist_vacancies_open.hits.total ">" 0}}
+            {{#each @root.data.supplimentaryResponses.shortlist_vacancies_open.hits.hits ~}}
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone shortlist-jobs">
+              {{> vacancy_mini _source}}
+            </div>
+            {{/each ~}}
+            {{#compare @root.data.supplimentaryResponses.shortlist_vacancies_closed.hits.total ">" 0}}
+            {{#each @root.data.supplimentaryResponses.shortlist_vacancies_closed.hits.hits ~}}
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone shortlist-jobs">
+              {{> vacancy_mini _source}}
+            </div>
+            {{/each ~}}
+            {{/compare}}
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone shortlist-jobs last-card">
+              <div class="mdc-card align-centre">
+                <a href="/search">Find more jobs for your shortlist</a>
+              </div>
+            </div>
+            {{else}}
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+              {{#compare @root.data.supplimentaryResponses.shortlist_vacancies_closed.hits.total ">" 0}}
+              <p class="h-padding">
+                There are currently no open jobs in your shortlist. <a href="/shortlist">See closed jobs</a>.
+              </p>
+              {{else}}
+              <p class="h-padding">
+                There are currently no jobs in your shortlist, if you shortlist a job it will appear here for easy reference.
+              </p>
+              {{/compare}}
+            </div>
+            {{/compare}}
+          </div>
+        </div>
+      </div>
+    {{/if}}
+
+    {{#compare @root.data.primaryResponse.hits.total ">" 0}}
     <div class="mdc-layout-grid home-heading">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+          {{#if @root.data.auth ~}}
           <h2 class="mdc-typography--headline5">
-            Your shortlist
+            Your latest jobs&ensp;
+            <span class="mdc-typography--body1">
+              <a href="/searches">Your searches</a>
+            </span>
           </h2>
+          {{else}}
+          <div class="mdc-typography--headline5">
+            Latest jobs&ensp;
+            <span class="mdc-typography--body1">
+              <a href="/search?sort=newest&page=2">Find more</a>
+            </span>
+          </div>
+          {{/if ~}}
         </div>
       </div>
     </div>
     <div class="home-jobs">
-      <div class="mdc-layout-grid equal-height home-shortlist">
+      <div class="mdc-layout-grid equal-height home-latest">
         <div class="scroll-button scroll-left">
           <span class="fal fa-fw fa-angle-left scroll-icon"></span>
         </div>
@@ -127,128 +195,62 @@
           <span class="fal fa-fw fa-angle-right scroll-icon"></span>
         </div>
         <div class="mdc-layout-grid__inner scrolling-grid">
-          {{#compare @root.data.supplimentaryResponses.shortlist_vacancies_open.hits.total ">" 0}}
-          {{#each @root.data.supplimentaryResponses.shortlist_vacancies_open.hits.hits ~}}
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone shortlist-jobs">
+          {{#each @root.data.primaryResponse.hits.hits ~}}
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs">
             {{> vacancy_mini _source}}
           </div>
           {{/each ~}}
-          {{#compare @root.data.supplimentaryResponses.shortlist_vacancies_closed.hits.total ">" 0}}
-          {{#each @root.data.supplimentaryResponses.shortlist_vacancies_closed.hits.hits ~}}
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone shortlist-jobs">
-            {{> vacancy_mini _source}}
-          </div>
-          {{/each ~}}
-          {{/compare}}
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone shortlist-jobs last-card">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs last-card">
             <div class="mdc-card align-centre">
-              <a href="/search">Find more jobs for your shortlist</a>
+              {{#if @root.data.auth ~}}
+              <a href="/search?sort=newest">All latest jobs</a>
+              {{else}}
+              <a href="/search?sort=newest&page=2">Find more jobs</a>
+              {{/if ~}}
             </div>
           </div>
-          {{else}}
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-            {{#compare @root.data.supplimentaryResponses.shortlist_vacancies_closed.hits.total ">" 0}}
-            <p class="h-padding">
-              There are currently no open jobs in your shortlist. <a href="/shortlist">See closed jobs</a>.
-            </p>
-            {{else}}
-            <p class="h-padding">
-              There are currently no jobs in your shortlist, if you shortlist a job it will appear here for easy reference.
-            </p>
-            {{/compare}}
-          </div>
-          {{/compare}}
         </div>
       </div>
     </div>
-  {{/if}}
+    {{/compare}}
 
-  {{#compare @root.data.primaryResponse.hits.total ">" 0}}
-  <div class="mdc-layout-grid home-heading">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-        {{#if @root.data.auth ~}}
-        <h2 class="mdc-typography--headline5">
-          Your latest jobs&ensp;
-          <span class="mdc-typography--body1">
-            <a href="/searches">Your searches</a>
-          </span>
-        </h2>
-        {{else}}
-        <div class="mdc-typography--headline5">
-          Latest jobs&ensp;
-          <span class="mdc-typography--body1">
-            <a href="/search?sort=newest&page=2">Find more</a>
-          </span>
+    {{#compare @root.data.supplimentaryResponses.top.hits.total ">" 0}}
+    <div class="mdc-layout-grid home-heading">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+          <h2 class="mdc-typography--headline5">
+            Top jobs&ensp;
+            <span class="mdc-typography--body1">
+              <a href="/search">Find more</a>
+            </span>
+          </h2>
         </div>
-        {{/if ~}}
       </div>
     </div>
-  </div>
-  <div class="home-jobs">
-    <div class="mdc-layout-grid equal-height home-latest">
-      <div class="scroll-button scroll-left">
-        <span class="fal fa-fw fa-angle-left scroll-icon"></span>
-      </div>
-      <div class="scroll-button scroll-right">
-        <span class="fal fa-fw fa-angle-right scroll-icon"></span>
-      </div>
-      <div class="mdc-layout-grid__inner scrolling-grid">
-        {{#each @root.data.primaryResponse.hits.hits ~}}
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs">
-          {{> vacancy_mini _source}}
+    <div class="home-jobs">
+      <div class="mdc-layout-grid equal-height home-top">
+        <div class="scroll-button scroll-left">
+          <span class="fal fa-fw fa-angle-left scroll-icon"></span>
         </div>
-        {{/each ~}}
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs last-card">
-          <div class="mdc-card align-centre">
-            {{#if @root.data.auth ~}}
-            <a href="/search?sort=newest">All latest jobs</a>
-            {{else}}
-            <a href="/search?sort=newest&page=2">Find more jobs</a>
-            {{/if ~}}
+        <div class="scroll-button scroll-right">
+          <span class="fal fa-fw fa-angle-right scroll-icon"></span>
+        </div>
+        <div class="mdc-layout-grid__inner scrolling-grid">
+          {{#each @root.data.supplimentaryResponses.top.hits.hits ~}}
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone top-jobs">
+            {{> vacancy_mini _source}}
+          </div>
+          {{/each ~}}
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone top-jobs last-card">
+            <div class="mdc-card align-centre">
+              <a href="/search">Find more jobs</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    {{/compare}}
   </div>
-  {{/compare}}
-
-  {{#compare @root.data.supplimentaryResponses.top.hits.total ">" 0}}
-  <div class="mdc-layout-grid home-heading">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-        <h2 class="mdc-typography--headline5">
-          Top jobs&ensp;
-          <span class="mdc-typography--body1">
-            <a href="/search">Find more</a>
-          </span>
-        </h2>
-      </div>
-    </div>
-  </div>
-  <div class="home-jobs">
-    <div class="mdc-layout-grid equal-height home-top">
-      <div class="scroll-button scroll-left">
-        <span class="fal fa-fw fa-angle-left scroll-icon"></span>
-      </div>
-      <div class="scroll-button scroll-right">
-        <span class="fal fa-fw fa-angle-right scroll-icon"></span>
-      </div>
-      <div class="mdc-layout-grid__inner scrolling-grid">
-        {{#each @root.data.supplimentaryResponses.top.hits.hits ~}}
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone top-jobs">
-          {{> vacancy_mini _source}}
-        </div>
-        {{/each ~}}
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone top-jobs last-card">
-          <div class="mdc-card align-centre">
-            <a href="/search">Find more jobs</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  {{/compare}}
 
   {{> currently_recruiting}}
 
