A 'good enough' fix for leading icons on ajax chips

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -676,6 +676,10 @@ a:hover {
   font-weight: 600;
   .mdc-chip__icon.mdc-chip__icon--leading {
     color: $mdc-theme-secondary-dark;
+    display: inline-block;
+  }
+  .mdc-chip__icon.mdc-chip__icon--leading-hidden {
+    display: none;
   }
   .mdc-chip__text {
     margin-left: $unit/2;
