--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -669,6 +669,9 @@ a:hover {
   color: $mdc-theme-tfn;
 }
 
+.mdc-chip-set .mdc-chip {
+  margin: 0;
+}
 .mdc-chip {
   background-color: $mdc-theme-secondary;
   color: $mdc-theme-secondary-dark;
