--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -219,7 +219,9 @@
         <a href="/organisation/{{organisation.slug}}" class="mdc-card__action">Find out more about {{organisation.name}}</a>
       </div>
       <div class="mdc-card__action-icons pull-right">
-        {{> shortlist_chip id=Id}}
+        <div class="mdc-chip-set mdc-chip-set--filter">
+          {{> shortlist_chip id=Id}}
+        </div>
       </div>
     </div>
   </div>
