--- a/sites/configurations/goodmoves/partials/vacancy/list.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/list.hbs
@@ -12,7 +12,9 @@
       <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
     </div>
     <div class="mdc-card__action-icons pull-right">
-      {{> shortlist_chip id=Id}}
+      <div class="mdc-chip-set mdc-chip-set--filter">
+        {{> shortlist_chip id=Id}}
+      </div>
     </div>
   </div>
 </div>
