--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2548,9 +2548,7 @@ form.inline-form {
   }
 }
 .scroll-button.pager {
-  height: 60%;
-  margin-top: 10%;
-  margin-bottom: 10%;
+  display: flex;
 }
 .scroll-button.scroll-left {
   left: $unit;
