--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -672,6 +672,14 @@ a:hover {
 .mdc-chip-set .mdc-chip {
   margin: 0;
 }
+#search-terms.mdc-chip-set {
+  float: left;
+  padding: 0;
+  margin-bottom: 0;
+  .mdc-chip {
+    margin: 0 $unit/2 $unit/4 0;
+  }
+}
 .mdc-chip {
   background-color: $mdc-theme-secondary;
   color: $mdc-theme-secondary-dark;
@@ -1267,14 +1275,6 @@ a {
   }
 }
 
-.mdc-chip-set {
-  float: left;
-  padding: 0;
-  margin-bottom: 0;
-  .mdc-chip {
-    margin: 0 $unit/2 $unit/4 0;
-  }
-}
 .pagination-mobile,
 .top-jobs .mdc-card__info--vacancy-title .top-job,
 .goodmoves-organisation .mdc-card.list .mdc-card__info--vacancy-organisation {
@@ -1416,6 +1416,7 @@ body.shortlist {
     background-color: white;
     border: none;
     border-radius: 0 0 2px 2px;
+    box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 5px 8px 0px rgba(0, 0, 0, 0.14), 0px 1px 14px 0px rgba(0, 0, 0, 0.12);
     h3 {
       font-size: 0.8rem;
       opacity: 0.6666;
