Finally fixed the IE11 card height issue

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1628,7 +1628,8 @@ body {
   }
   .mdc-card__media--organisation {
     max-width: 120px;
-    height: auto;
+    max-height: 120px;
+    /*height: auto;*/
     display: flex;
     align-items: flex-start;
     margin: $unit/2 0 0 $unit;
