Sizing on home page banner

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1942,15 +1942,15 @@ footer,
         }
         .header-text {
           padding: 0 0 $unit*1.5;
-          font-size: 4.8rem;
+          font-size: 4rem;
           line-height: 4rem;
-          letter-spacing: -0.2rem;
+          letter-spacing: -0.3rem;
           .normal {
             letter-spacing: -0.4rem;
             font-weight: $heading-light-font-weight;
           }
           .normal.moves {
-            margin-left: -0.4rem;
+            margin-left: -0.2rem;
           }
         }
       }
@@ -1959,17 +1959,17 @@ footer,
 }
 @media screen and (min-width: $desktop-landscape-breakpoint + 1) {
   .home-banner .banner-search.overlay .content {
-    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 47%, transparent 47.08%, transparent);
+    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 42%, transparent 42.08%, transparent);
   }
 }
 @media screen and (min-width: $mobile-landscape-breakpoint + 1) and (max-width: $desktop-landscape-breakpoint) {
   .home-banner .banner-search.overlay .content {
-    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 57%, transparent 57.08%, transparent);
+    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 48%, transparent 48.08%, transparent);
   }
 }
 @media screen and (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
   .home-banner .banner-search.overlay .content {
-    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 77%, transparent 77.08%, transparent);
+    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 66%, transparent 66.08%, transparent);
   }
 }
 @media screen and (max-width: $mobile-breakpoint) {
@@ -2073,6 +2073,7 @@ footer,
 }
 .home-browse {
   background-color: $mdc-theme-complimentary-light;
+  border-bottom: $unit/5 solid $mdc-theme-primary-light;
   .home-jobs {
     background-color: transparent;
   }
