--- a/sites/configurations/goodmoves/templates/pages/page.hbs
+++ b/sites/configurations/goodmoves/templates/pages/page.hbs
@@ -1,9 +1,5 @@
-{{!-- <div class="hide-sm hide-md">
-  {{> vacancy_search_form this instance_id="perm"}}
-</div> --}}
-
 <div class="container-content goodmoves-page">
-  {{> banner_ads}}
+  {{> banner_ad}}
 
   <div class="mdc-card full mdc-elevation--z3">
     {{#compare data.primaryResponse.hits.total ">" 0 ~}}
