--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -54,7 +54,7 @@ body {
   word-break: break-word;
   -webkit-tap-highlight-color: transparent;
 }
-x.mdc-theme--background {
+.mdc-theme--background {
   background-color: $mdc-theme-secondary-light !important;
 }
 .mdc-toolbar-fixed-adjust {
