Added missing chip-sets

--- a/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
@@ -1,7 +1,7 @@
 <div id="detailed-results-container" class="container-content goodmoves-shortlist">
   {{#compare @root.data.shortlist_vacancies.open.hits.total ">" 0}}
   <div class="t-margin-full pull-right">
-    <div class="t-margin">
+    <div class="mdc-chip-set mdc-chip-set--filter t-margin">
       {{> shortlist_alerts}}
     </div>
   </div>
