--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -40,7 +40,9 @@
           <h3 class="mdc-typography--headline6 v-margin-full">
             Shortlist alerts
           </h3>
-          {{> shortlist_alerts}}
+          <div class="mdc-chip-set mdc-chip-set--filter">
+            {{> shortlist_alerts}}
+          </div>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
           <h3 class="mdc-typography--headline6 v-margin-full">
@@ -111,8 +113,8 @@
           <h3 class="mdc-typography--headline6">
             Linked accounts
           </h3>
-          <div class="v-margin-full">
-            {{#each (split "google,facebook,twitter" ",") ~}}
+          <div class="mdc-chip-set mdc-chip-set--filter v-margin-full">
+              {{#each (split "google,facebook,twitter" ",") ~}}
               <div class="v-margin">
                 {{> linkChip
                     provider=this
