--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -669,8 +669,14 @@ a:hover {
   color: $mdc-theme-tfn;
 }
 
-.mdc-chip-set .mdc-chip {
-  margin: 0;
+.mdc-chip-set {
+  .v-margin {
+    display: block;
+    width: 100%;
+  }
+  .mdc-chip {
+    margin: 0;
+  }
 }
 #search-terms.mdc-chip-set {
   float: left;
