--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -113,8 +113,8 @@
           <h3 class="mdc-typography--headline6">
             Linked accounts
           </h3>
-          <div class="mdc-chip-set mdc-chip-set--filter v-margin-full">
-              {{#each (split "google,facebook,twitter" ",") ~}}
+          <div class="mdc-chip-set mdc-chip-set--filter">
+            {{#each (split "google,facebook,twitter" ",") ~}}
               <div class="v-margin">
                 {{> linkChip
                     provider=this
