--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -168,7 +168,7 @@
     <div class="mdc-layout-grid home-heading">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          {{#if @root.data.auth ~}}
+          {{#ifAll @root.data.auth @root.data.searches.items.[0].[0] ~}}
           <h2 class="mdc-typography--headline5">
             Your latest jobs&ensp;
             <span class="mdc-typography--body1">
@@ -182,7 +182,7 @@
               <a href="/search?sort=newest&page=2">Find more</a>
             </span>
           </div>
-          {{/if ~}}
+          {{/ifAll ~}}
         </div>
       </div>
     </div>
@@ -202,11 +202,11 @@
           {{/each ~}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs last-card">
             <div class="mdc-card align-centre">
-              {{#if @root.data.auth ~}}
+              {{#ifAll @root.data.auth @root.data.searches.items.[0].[0] ~}}
               <a href="/search?sort=newest">All latest jobs</a>
               {{else}}
               <a href="/search?sort=newest&page=2">Find more jobs</a>
-              {{/if ~}}
+              {{/ifAll ~}}
             </div>
           </div>
         </div>
