--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -94,25 +94,27 @@
               </span>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone align-centre">
-              {{#> ajax_chip
-                onUrl="/toggle-subscription"
-                offUrl="/toggle-subscription"
-                onText="Email"
-                offText="Email"
-                onMethod="POST"
-                offMethod="POST"
-                iconClasses="far fa-envelope"
-                on=partitionActive
-              }}
-              {
-                "onData": {
-                  "name": {{{stringify ../partition}}}
-                },
-                "offData": {
-                  "name": {{{stringify ../partition}}}
+              <div class="mdc-chip-set mdc-chip-set--filter">
+                {{#> ajax_chip
+                  onUrl="/toggle-subscription"
+                  offUrl="/toggle-subscription"
+                  onText="Email"
+                  offText="Email"
+                  onMethod="POST"
+                  offMethod="POST"
+                  iconClasses="far fa-envelope"
+                  on=partitionActive
+                }}
+                {
+                  "onData": {
+                    "name": {{{stringify ../partition}}}
+                  },
+                  "offData": {
+                    "name": {{{stringify ../partition}}}
+                  }
                 }
-              }
-              {{/ajax_chip}}
+                {{/ajax_chip}}
+              </div>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
               {{> delete_search name=partition}}
