Searches styling fix

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -583,6 +583,17 @@ footer h3,
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  padding: 0;
+  bottom: 0 !important;
+  right: 0 !important;
+}
+.saved-search-remove .far:hover,
+.saved-search-remove:hover .far {
+  color: $mdc-theme-error !important;
+}
+.saved-search-remove:focus::before,
+.saved-search-remove:hover::before {
+  opacity: 0;
 }
 
 .icon-toggle-off {
@@ -1334,8 +1345,6 @@ hr {
   border: none;
   background: transparent;
   font-size: 1.5rem;
-  bottom: 8px !important;
-  right: 8px !important;
   .far:hover {
     color: $mdc-theme-primary-dark;
   }
