--- a/sites/configurations/goodmoves/partials/vacancy/gist.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/gist.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card goodmoves-vacancy goodmoves-{{vacancy_status}} gist {{if top_job "top-job"}}" data-vacancy-id="{{Id}}">
+<div class="mdc-card goodmoves-vacancy gist{{if top_job " top-job"}}" data-vacancy-id="{{Id}}">
   <div class="mdc-card__info--vacancy-row">
     <div class="mdc-card__media mdc-card__media--square demo-card__media search-result-card__media--organisation" style="background-image:url({{organisation.logo_url}});"></div>
     <div class="mdc-card__info--vacancy">
