--- a/sites/configurations/goodmoves/partials/vacancy/list.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/list.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card goodmoves-vacancy goodmoves-{{vacancy_status}} list {{if top_job "top-job"}}" data-vacancy-id="{{Id}}">
+<div class="mdc-card goodmoves-vacancy list{{if top_job " top-job"}}" data-vacancy-id="{{Id}}">
   {{> vacancy_key_info}}
   <hr class="mdc-list-divider" />
   {{#if description_short ~}}
