Started fixing sidebar IE11 stuff

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -370,6 +370,11 @@ footer h3,
     background-color: $mdc-theme-primary;
   }
 }
+.mdc-drawer--occasional-ie11 {
+  box-sizing: border-box;
+  position: relative;
+  z-index: 4;
+}
 .mdc-tab .mdc-tab--label,
 .mdc-button {
   transition: 0.1s;
