--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -20,8 +20,8 @@
 {{/inline}}
 
   <div class="mdc-drawer__content">
-    <h2 class="mdc-drawer__content-heading hide-sm">Search jobs</h2>
-    <div id="search-tab-bar" class="mdc-tab-bar mdc-tab-bar--fullwidth search-tab-bar" data-mdc-auto-init="MDCTabBar">
+    <h2 class="mdc-drawer__content-heading hide-sm mdc-drawer--occasional-ie11">Search jobs</h2>
+    <div id="search-tab-bar" class="mdc-tab-bar mdc-tab-bar--fullwidth search-tab-bar mdc-drawer--occasional-ie11" data-mdc-auto-init="MDCTabBar">
       <a href="/search{{@root.request.url.search}}" class="mdc-tab{{#compare @root.request.url.pathname "===" "/search"}} mdc-tab--active{{/compare}} details-tab" id="detailed-results">
         <span class="far fa-list fa-fw" title="List"></span>
         List
@@ -64,7 +64,7 @@
               </div>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-              <div class="mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
+              <div class="mdc-select mdc-select--box mdc-drawer--occasional-ie11" data-mdc-auto-init="MDCSelect">
                 <select data-location="{{instance_id}}-location" class="mdc-select__native-control search-distance" id="{{instance_id}}-distance" name="distance">
                   <option value="8.04672"{{#compare @root.request.params.query.distance "8.04672"}} selected{{/compare}}>5 miles</option>
                   <option value="16.09344"{{#compare @root.request.params.query.distance "16.09344"}} selected{{/compare}}>10 miles</option>
@@ -90,7 +90,7 @@
       <input type="hidden" name="lng" value="{{@root.request.params.query.lng}}" id="{{instance_id}}-lng">
       <!-- <input type="hidden" name="sort" value="distance" id="sort"> -->
 
-      <h3 class="mdc-drawer__content-heading cursor-pointer noselect" data-collapse-target="#{{instance_id}}-salary-collapse" role="button" aria-pressed="false" aria-label="Show salary search options" tabindex="0">
+      <h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{instance_id}}-salary-collapse" role="button" aria-pressed="false" aria-label="Show salary search options" tabindex="0">
         Salary
         <span class="mdc-icon-toggle pull-right">
           <i class="far {{#if (getProperty @root.request.params.query "salary_min")}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
