--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1102,6 +1102,22 @@ a {
     border: none;
   }
 }
+.mdc-card.full,
+.mdc-card.search-result {
+  .mdc-card__info--vacancy {
+    .fa-ul {
+      float: left;
+    }
+    .fa-ul.first {
+      clear: left;
+      width: 18vw;
+    }
+    .fa-ul.last {
+      width: 16vw;
+      margin-left: 2.5rem !important;
+    }
+  }
+}
 .mdc-card.list:last-child,
 .mdc-card.mini:last-child,
 .mdc-card.gist:last-child,
@@ -1164,19 +1180,6 @@ a {
     margin: $unit/2 0 $unit;
     small {
       font-size: 0.92rem;
-    }
-  }
-  .mdc-card__info--vacancy {
-    .fa-ul {
-      float: left;
-    }
-    .fa-ul.first {
-      clear: left;
-      width: 18vw;
-    }
-    .fa-ul.last {
-      width: 16vw;
-      margin-left: 2.5rem !important;
     }
   }
   .mdc-card__info--vacancy-title a,
